fixed spacing in Navbar

--- a/src/containers/NavBar/index.css
+++ b/src/containers/NavBar/index.css
@@ -2,12 +2,21 @@
     background-color: #5000b8;
 }
 
+.navBarContainer{
+    justify-content: space-around;
+}
+
 .paketManLogo{
     height: 2.724625rem;
     width: 6.25rem;
 }
 
-#navBarItems .nav-link{
+.navbar-nav{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+.navbar-nav .nav-link{
     color: #5000b8;
     font-family: 'Tajawal';
     font-weight: bold;
@@ -17,4 +26,5 @@
     height: 1.5rem;
     margin: 0.5rem 2rem;
     text-align: center;
+    padding-top: 2px;
 }
